--- a/README.org
+++ b/README.org
@@ -26,7 +26,7 @@
 | *Shell*         | Zsh               | Zsh               | Zsh               |
 | *DM*            | LightDM           | TTY1 Login        | /                 |
 | *WM*            | Bspwm             | Sway              | Yabai             |
-| *Compositor*    | Picom             | Sway              | /                 |
+| *Compositor*    | Picom (pijulius)  | Sway              | /                 |
 | *Bar*           | Polybar           | Waybar            | /                 |
 | *Hotkeys*       | Sxhkd             | Sway              | Skhd              |
 | *Launcher*      | Rofi              | Rofi              | /                 |
