--- a/README.org
+++ b/README.org
@@ -25,8 +25,8 @@
 |-----------------+-------------------+-------------------+-------------------|
 | *Shell*         | Zsh               | Zsh               | Zsh               |
 | *DM*            | LightDM           | TTY1 Login        | /                 |
-| *WM*            | Bspwm             | Sway              | Yabai             |
-| *Compositor*    | Picom (pijulius)  | Sway              | /                 |
+| *WM*            | Bspwm             | Hyprland          | Yabai             |
+| *Compositor*    | Picom (pijulius)  | Hyprland          | /                 |
 | *Bar*           | Polybar           | Waybar            | /                 |
 | *Hotkeys*       | Sxhkd             | Sway              | Skhd              |
 | *Launcher*      | Rofi              | Rofi              | /                 |
